# XMas_Lights

./: .gitignore  CMakeLists.txt  icons.qrc
config/: Alternating Flashing.json  Animals.json  Animals2.json  CoolioFoolio Faster.json  CoolioFoolio.json  Rotating Timer.json  Slow Timer.json  Start_Lights.sh  Strobe.json  Turn Off.json  Turn On.json  lowmidhigh.json  timer1
include/: archive_common.h  automate_widget.h  filter_widget.h  json_archive.h  light_strand_widget.h  main_window.h  timer_widget.h
src/: automate_widget.cpp  filter_widget.cpp  json_archive.cpp  light_strand_widget.cpp  main.cpp  main_window.cpp  timer_widget.cpp
ui/: automate_widget.ui  filter_widget.ui  light_strand_widget.ui  main_window.ui  timer_widget.ui
